<?xml version="1.0"?>
<package format="2">
  <name>refills_marker_generator</name>
  <version>0.1.0</version>
  <description>
    A collection of nodes and scripts to generate QRmarkers used in the REFILLS project.
  </description>

  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>
  <author email="georg.bartels@cs.uni-bremen.de">Georg Bartels</author>

  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>

</package>
